:bug: Fix wrong padding.

--- a/frontend/scss/components/templates/_default.scss
+++ b/frontend/scss/components/templates/_default.scss
@@ -35,7 +35,7 @@
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(24, 1fr);
-    padding: 0 30px;
+    padding: 0;
   }
 }
 
